# Shawn-Kim96.github.io

./: .gitignore  README.md  index.html  pyproject.toml  rsvp_result.csv
css/: bootstrap.css  style.css
data_anaylsis/: api_analysis.py
js/: comments.js
sass/: style.scss
