[tool.poetry]
name = "shawn-kim96"
version = "0.1.0"
description = ""
authors = ["Shawn-Kim96 <dun03191@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.31.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
